<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SceneSommeilActivity">

    <TextView
        android:id="@+id/tvQuestionSommeil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tu_te_pr_pares_dormir_quelle_activit_te_semble_la_plus_apaisante"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <RadioGroup
        android:id="@+id/sommeilGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionSommeil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/rbScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_t_l_phone" />

        <RadioButton
            android:id="@+id/rbLecture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lecture_calme" />

        <RadioButton
            android:id="@+id/rbMeditation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_ditation" />

    </RadioGroup>

    <Button
        android:id="@+id/btnNextSceneSommeil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_endormir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>