<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SceneCorveeActivity">

    <TextView
        android:id="@+id/tvQuestionCorvee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/de_retour_chez_toi_une_t_che_m_nag_re_t_attend_que_fais_tu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutChecks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionCorvee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <CheckBox
            android:id="@+id/cbVaisselle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vaisselle" />

        <CheckBox
            android:id="@+id/cbLinge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linge" />

        <CheckBox
            android:id="@+id/cbIgnorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ignorer" />

    </LinearLayout>

    <Button
        android:id="@+id/btnNextSceneCorvee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>